--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+    <header>
+
+        <h3>G-3 Architects</h3>
+
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Login</a></li>
+        </ul>
+
+
+
+
+    </header>
     
+    <main>  </main>
+
+    <footer></footer>
 </body>
 </html>
