--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
 
 
     <header>
+        <nav>   
+          <h3 class="nav-titel">G-3 Architects</h3>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
 
-        <h3>G-3 Architects</h3>
+        <div class="banner">
 
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Login</a></li>
-        </ul>
+         <div class="banner-content">
+            <h1 class="banner-titel">Brand New Group of Architects 
+            </h1>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
+                 or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+           
+         </div> 
+         <div class="banner-image">
+            <img src="images/banner.png" alt="" srcset="">
+         </div>
+     
+
+        </div>
 
 
 
